--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/code.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web developer portifolio" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="description"
+      content="Web developer portfolio business intentions"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/code.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Eliabe Santos</title>
   </head>
