--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web developer portfolio business intentions"
+      content="Web developer portfolio for business intentions"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/code.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Eliabe Santos</title>
